优化下载代码，支持增量抓取

--- a/src/main/resources/META-INF/spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/spring-configuration-metadata.json
@@ -2,13 +2,13 @@
   "groups": [
     {
       "name": "app",
-      "type": "io.lw900925.download.app.AppProperties",
-      "sourceType": "io.lw900925.download.app.AppProperties"
+      "type": "io.lw900925.app.AppProperties",
+      "sourceType": "io.lw900925.app.AppProperties"
     },
     {
       "name": "app.proxy",
-      "type": "io.lw900925.download.app.AppProperties$Proxy",
-      "sourceType": "io.lw900925.download.app.AppProperties",
+      "type": "io.lw900925.app.AppProperties$Proxy",
+      "sourceType": "io.lw900925.app.AppProperties",
       "sourceMethod": "getProxy()"
     }
   ],
@@ -16,37 +16,47 @@
     {
       "name": "app.access-token",
       "type": "java.lang.String",
-      "sourceType": "io.lw900925.download.app.AppProperties"
+      "sourceType": "io.lw900925.app.AppProperties"
     },
     {
       "name": "app.base-url",
       "type": "java.lang.String",
-      "sourceType": "io.lw900925.download.app.AppProperties"
+      "sourceType": "io.lw900925.app.AppProperties"
     },
     {
       "name": "app.count",
       "type": "java.lang.String",
-      "sourceType": "io.lw900925.download.app.AppProperties"
+      "sourceType": "io.lw900925.app.AppProperties"
+    },
+    {
+      "name": "app.increment",
+      "type": "java.lang.Boolean",
+      "sourceType": "io.lw900925.app.AppProperties"
+    },
+    {
+      "name": "app.users-file-path",
+      "type": "java.lang.String",
+      "sourceType": "io.lw900925.app.AppProperties"
     },
     {
       "name": "app.media-download-path",
       "type": "java.lang.String",
-      "sourceType": "io.lw900925.download.app.AppProperties"
+      "sourceType": "io.lw900925.app.AppProperties"
     },
     {
       "name": "app.proxy.host",
       "type": "java.lang.String",
-      "sourceType": "io.lw900925.download.app.AppProperties$Proxy"
+      "sourceType": "io.lw900925.app.AppProperties$Proxy"
     },
     {
       "name": "app.proxy.port",
       "type": "java.lang.Integer",
-      "sourceType": "io.lw900925.download.app.AppProperties$Proxy"
+      "sourceType": "io.lw900925.app.AppProperties$Proxy"
     },
     {
       "name": "app.screen-name",
       "type": "java.lang.String",
-      "sourceType": "io.lw900925.download.app.AppProperties"
+      "sourceType": "io.lw900925.app.AppProperties"
     }
   ],
   "hints": []
