--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ dependencies {
 	implementation 'com.google.guava:guava:30.1-jre'
 	implementation 'com.google.code.gson:gson:2.8.6'
 	implementation 'org.apache.commons:commons-lang3:3.11'
+	implementation 'cn.hutool:hutool-all:5.8.9'
 
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
